--- a/css/html/usage.html
+++ b/css/html/usage.html
@@ -186,8 +186,8 @@ Note: "-norm 1" is a prerequisite for this parameter.</td>
 		  k141_433371_length_91162_1 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;geneA<br>
 		  k141_455489_length_11328_1 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;geneB</p>
 		<li><p style=" margin-left: 5px;"><b>Assembly-based</b></p></li>
-		<p>$&nbsp;perl GetFun_CCycdb.pl -situation assembly-based -wd ./ -m diamond -f fatsa -s nucl -norm 0 -thread 10 -od ./output</p>
-		<p>$ perl GetFun_CCycdb.pl -situation assembly-based -wd ./ -m diamond -f fatsa -s nucl -tpm 1 -norm 0 -thread 10 -od ./output </p>
+		<p>$&nbsp;perl GetFun_CCycdb.pl -situation assembly-based -wd ./ -m diamond -f fasta -s nucl -norm 0 -thread 10 -od ./output</p>
+		<p>$ perl GetFun_CCycdb.pl -situation assembly-based -wd ./ -m diamond -f fasta -s nucl -tpm 1 -norm 0 -thread 10 -od ./output </p>
 		<p><strong>Output: </strong></p>
 		<p>FunProfile_read-based_$method_random.txt OR FunProfile_read-based_$method_norandom.txt </p>
 		<p>ORF2GENE/$sample.ORF2GENE.txt</p>
