--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ li {
    <div class="box1">
       <p><strong>CCycDB</strong> is a knowledge-based functional gene database for accurate metagenomic profiling of carbon cycling microbial communities. CCycDB contains 4,676 gene families within 6 categories. These gene families are further categorized into 45 sub-categories within sub-category I and 188 sub-categories within sub-category II with a total of 10,991,724 targeted sequences. A series of validations demonstrated that CCycDB outperformed large public orthology databases in terms of coverage, specificity, and accuracy, and can be used to accurately profile carbon cycling microbial communities in real metagenomic datasets. Please see "<strong>CCycDB: an integrative knowledgebase to fingerprint microbial carbon cycling processes</strong>" for more details.</p>
       <p>Please let us know if any genes have escaped our attention or have been cataloged ambiguously, we will be happy to add or correct them !</p>
-      <p>(Updated on October 26, 2023)</p>
+      <p>(Updated on October 2023)</p>
     </div>
     <img src="../image/FlowChart.jpg" alt="Workflow summary of CCycDB" style="max-width: 800px; max-height: 600px; margin-left: 120px;"> 
 <a name="Definition"></a>
@@ -127,6 +127,16 @@ li {
     </ul>
 </div>
 
+<!-- download -->
+<div class="box2">
+    <h2 id="model-do" style="text-align: left;"><a name="citation"></a>Download</h2>
+	<ul>
+	 <li><p style="font-size: 18px;margin-left: -2px;text-decoration:underline;"><a href="https://zenodo.org/records/10045943">Version 2.1  (Upadate: Oct. 2025)</a></p> </li>
+    <li><p style="font-size: 18px;margin-left: -2px;text-decoration:underline;"><a href="https://zenodo.org/records/10045943">Version 2.0  (Upadate: Oct. 2023)</a></p></li>
+	<li><p style="font-size: 18px;margin-left: -2px;text-decoration:underline;"><a href="https://zenodo.org/records/8324818">Version 1.0  (Upadate: Sep.  2023)</a></p></li>
+    </ul>
+</div>
+	
 <!-- ciation -->
 <div class="box2">
     <h2 id="model-configs" style="text-align: left;"><a name="citation"></a>Citation</h2>
