--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ li {
 
 <!-- download -->
 <div class="box2">
-    <h2 id="model-do" style="text-align: left;"><a name="citation"></a>Download</h2>
+    <h2  style="text-align: left;"><a name="citation"></a>Download</h2>
 	<ul>
 	 <li><p style="font-size: 18px;margin-left: -2px;text-decoration:underline;"><a href="https://zenodo.org/records/10045943">Version 2.1  (Upadate: Oct. 2025)</a></p> </li>
     <li><p style="font-size: 18px;margin-left: -2px;text-decoration:underline;"><a href="https://zenodo.org/records/10045943">Version 2.0  (Upadate: Oct. 2023)</a></p></li>
