--- a/index.html
+++ b/index.html
@@ -97,12 +97,16 @@ li {
 </head>
 	
 	
-<body>
+<body>https://github.com/ccycdb/ccycdb.github.io/blob/main/index.html
 <h1>CCycDB: an integrative knowledgebase to fingerprint microbial carbon cycling processes</h1>
 <hr>
 
 
-<div id="menuleft"><a href="#"><strong>HOME</strong></a> <a href="#Definition">Definition</a> <a href="../css/html/usage.html">Usage and Examples</a> <a href="https://zenodo.org/records/10045943">Download</a> <a href="#citation">Citing CCycDB</a> <a href="../css/html/learnmore.html">Learn more</a> <a href="#contact">Contact us</a></div>
+<div id="menuleft"><a href="#"><strong>HOME</strong></a> <a href="#Definition">Definition</a> 
+	<a href="../css/html/usage.html">Usage and Examples</a> 
+	<a href="#download">Download</a>
+	<a href="#citation">Citing CCycDB</a> <a href="../css/html/learnmore.html">Learn more</a> 
+	<a href="#contact">Contact us</a></div>
 
 <h2 style="margin-left: 200px;margin-top: 0px;"> Welcom to the CCycDB ! </h2>
 
@@ -129,7 +133,7 @@ li {
 
 <!-- download -->
 <div class="box2">
-    <h2  style="text-align: left;"><a name="citation"></a>Download</h2>
+    <h2  style="text-align: left;"><a name="download"></a>Download</h2>
 	<ul>
 	 <li><p style="font-size: 18px;margin-left: -2px;text-decoration:underline;"><a href="https://zenodo.org/records/10045943">Version 2.1  (Upadate: Oct. 2025)</a></p> </li>
     <li><p style="font-size: 18px;margin-left: -2px;text-decoration:underline;"><a href="https://zenodo.org/records/10045943">Version 2.0  (Upadate: Oct. 2023)</a></p></li>
